src/objects/IFU_Mapping__mdt.object
<CustomObject>
    <description>Adding IFU to Distributor Orders containing Receivers</description>
    <fields>
        <fullName>IFU__c</fullName>
        <description>IFU</description>
        <label>IFU</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pricebook__c</fullName>
        <label>Pricebook</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test</fullName>
                    <default>true</default>
                    <label>Test</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SKU__c</fullName>
        <description>Pricebook</description>
        <label>SKU</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DIST SALES SAMPLE</fullName>
                </value>
                <value>
                    <fullName>DIST STANDARD</fullName>
                    <default>true</default>
                    <label>DIST STANDARD</label>
                </value>
                <value>
                    <fullName>CH STANDARD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>IFU Mapping</label>
    <pluralLabel>IFUs Mapping</pluralLabel>
</CustomObject>